Added Typeform Functionality

--- a/about-me.html
+++ b/about-me.html
@@ -52,21 +52,23 @@
 				<hr class="lower-hr">
 				<p>Special shoutout to Chava Shulman, Noam Swissa, Nishat Anjum, Antara Khan, Eugene Dorokhin, Flo Rencia, 
 				Hindy Drillic, Claudia Contreras, Joseph Guevara, and Maged Mahmoud, who have all welcomed me warmly into their 
-				communitites and clubs, showed true leadership, and offered support, and advice.</p>
+				communitites and clubs, showed true leadership, and offered support, and advice throughout my first year.</p>
 				<br>
 				<br>
 				<br>
 				<p>Thank you for taking the time to read. Follow the button to learn more about my community engagement and experience.</p>
 				<hr>
 				<hr>
+	
 				<div class="footer">
-					<input type="button" value="GET IN TOUCH">
+					<h1>Room for improvement on the website? Concerns? Questions? Comments? Need my resume?</h1>
+					<a href="contact.html"><input type="button" value="GET IN TOUCH"></a>
 					<div id="social-links">
 						<img src="Assets/github.png">
 						<img src="Assets/linkedin.png">
 						<img src="Assets/twitter.png">
 						<img src="Assets/instagram.png">
-					</div>	
+					</div>
 				</div>
 			</div>	
 		</div>
