--- a/experiences.html
+++ b/experiences.html
@@ -29,29 +29,22 @@
 					<hr>
 					<hr>
 					<h2>Project Rousseau</h2>
-					<p>why project rousseau
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-					sed do eiusmod tempor incididunt ut labore et dolore magna 
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-					ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-					Duis aute irure dolor in reprehenderit in voluptate velit 
-					esse cillum dolore eu fugiat nulla pariatur</p>
-					<h2>RailsBridegNYC</h2>
-					<p>why railsbridge
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-					sed do eiusmod tempor incididunt ut labore et dolore magna 
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-					ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-					Duis aute irure dolor in reprehenderit in voluptate velit 
-					esse cillum dolore eu fugiat nulla pariatur</p>	
+					<p>
+						Project Rousseau empowers youth in communities with the greatest 
+						need to reach their full potential and pursue higher education. 
+						They aim to do this with their four pillars: mentoring, academics, 
+						community service, and broadening horizons. I have volunteered to 
+						lead a class and have a wonderful mentee I hope to help as much as 
+						possible.
+					</p>
 					<h2>Magner Center</h2>
-					<p>why magner center
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-					sed do eiusmod tempor incididunt ut labore et dolore magna 
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-					ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-					Duis aute irure dolor in reprehenderit in voluptate velit 
-					esse cillum dolore eu fugiat nulla pariatur</p>						
+					<p>
+					Magner Center is the career center at Brooklyn College, they 
+					offer resources for students to excel at their career and gain 
+					experience in their field. They have many useful workshops and 
+					events throughout the year. I have helped them out in many of 
+					these events and continue to do so whenever I can.
+					</p>						
 					<hr>
 					<p>I also do one-two day volunteering for causes such as economic empowerment, animal welfare, community building, and others.</p>\
 					<hr>
@@ -61,38 +54,43 @@
 					<hr>
 					<h2>Magner Center Ambassador</h2>
 					<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-					sed do eiusmod tempor incididunt ut labore et dolore magna 
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-					ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-					Duis aute irure dolor in reprehenderit in voluptate velit 
-					esse cillum dolore eu fugiat nulla pariatur</p>						
+						As a Magner Center Ambassador, I greeted and helped students,
+						and professionals, answered phone calls, assisted set up for
+						events, signed in studens, and administrative tasks like 
+						creating flyers. This was my first formal work experience in 
+						and I enjoyed it as I improved my communication, and met many 
+						wonderful people. I also enjoyed all the advice I recieved at 
+						the events and from the conversations at the Magner Center. 
+					</p>						
 					<h2>Website Devloper Intenship</h2>
 					<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-					sed do eiusmod tempor incididunt ut labore et dolore magna 
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-					ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-					Duis aute irure dolor in reprehenderit in voluptate velit 
-					esse cillum dolore eu fugiat nulla pariatur</p>
+						Summer 2017, I spent 6 weeks rebuilding Brooklyn Bark's 
+						website. I used Wordpress, as a content management system,
+						and coded mainly in SCSS and sometimes PHP. This experience 
+						exposed me to working in teams where I improved my communication 
+						and learned new tools. I feel more comfortable making responsive 
+						website quickly.
+					</p>
 					<h2>Co Director of WICS Mentorship Initiative</h2>
 					<p>
-					Lorem ipsum dolor sit amet, consectetur adipiscing elit, 
-					sed do eiusmod tempor incididunt ut labore et dolore magna 
-					aliqua. Ut enim ad minim veniam, quis nostrud exercitation 
-					ullamco laboris nisi ut aliquip ex ea commodo consequat. 
-					Duis aute irure dolor in reprehenderit in voluptate velit 
-					esse cillum dolore eu fugiat nulla pariatur</p>						
+						The intention of this program is to provide our members with a 
+						network of professionals in the field who have faced the same 
+						challenges they are facing and build a support group to keep 
+						anyone who identifies as a woman to stay in tech and pursue a 
+						successful career.
+					</p>						
 				</div>	
+
 				<div class="footer">
-					<input type="button" value="GET IN TOUCH">
+					<h1>Room for improvement on the website? Concerns? Questions? Comments? Need my resume?</h1>
+					<a href="contact.html"><input type="button" value="GET IN TOUCH"></a>
 					<div id="social-links">
 						<img src="Assets/github.png">
 						<img src="Assets/linkedin.png">
 						<img src="Assets/twitter.png">
 						<img src="Assets/instagram.png">
-					</div>	
-				</div>				
+					</div>
+				</div>			
 			</div>
 		</div>
 	</body>
