--- a/index.html
+++ b/index.html
@@ -98,7 +98,7 @@
 	
 	<div class="footer">
 		<h1>Room for improvement on the website? Concerns? Questions? Comments? Need my resume?</h1>
-		<input type="button" value="GET IN TOUCH">
+		<a href="contact.html"><input type="button" value="GET IN TOUCH"></a>
 		<div id="social-links">
 			<img src="Assets/github.png">
 			<img src="Assets/linkedin.png">
