--- a/projects.html
+++ b/projects.html
@@ -50,17 +50,20 @@
 						</div>
 					</div>			
 				</div>
-			</div> 
-			<div class="footer">
-				<input type="button" value="GET IN TOUCH">
-				<div id="social-links">
-					<img src="Assets/github.png">
-					<img src="Assets/linkedin.png">
-					<img src="Assets/twitter.png">
-					<img src="Assets/instagram.png">
-				</div>	
-			</div>			
+			</div> 		
 		</div>
+		
+	
+	<div class="footer">
+		<h1>Room for improvement on the website? Concerns? Questions? Comments? Need my resume?</h1>
+		<a href="contact.html"><input type="button" value="GET IN TOUCH"></a>
+		<div id="social-links">
+			<img src="Assets/github.png">
+			<img src="Assets/linkedin.png">
+			<img src="Assets/twitter.png">
+			<img src="Assets/instagram.png">
+		</div>
+	</div>		
 
 	</body>	
 </html>
