--- a/index.html
+++ b/index.html
@@ -2,27 +2,29 @@
 <html>
 <head> 
 	<title>Shahzoda Davlatova</title>
-	<meta name="viewport" content="width=device-width" />
+	<meta name="viewport" content="width=device-width" charset="utf-8"/>
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="Stylesheets/main.css">	
 	<script src="https://use.fontawesome.com/d272e159ad.js"></script>
+	<script src="https://www.w3schools.com/lib/w3data.js"></script>
 </head>
 	
-<body>
-	<nav>
-			<a href="index.html">HOME /</a>
-			<a href="about-me.html">ABOUT /</a>
-			<a href="experiences.html">EXPERIENCES /</a>
-			<a href="projects.html">PROJECT </a>
-	</nav>	
+<body style="background-color: white;">
+	<div w3-include-html="header.html"></div>
+
+	<script>
+	w3IncludeHTML();
+	</script> 
+	
 	<div class="hero">
 		<div class="container">
 			<h2>SHAHZODA DAVLATOVA</h2> <br>
 			<a href="index.html#begin"><input type="button" value="GET STARTED"></a>
 		</div>
+		<a name="begin"></a>
 	</div>
 	
-	<a name="begin"></a>
+	
 	<hr class="higher-hr"> 
 	<hr>
 	<h1>IT'S ALL ABOUT THE PROGRESS.</h1>
@@ -32,17 +34,17 @@
 	<div class="container">
 		<div class="row">
 			<div id="item-1" class="item">
-				<div class="overlay">
+				<a href="about-me.html"><div class="overlay">
 					<div class="text">ABOUT ME</div>
-				</div>
+				</div></a>
 			</div>
 			<div id="item-2" class="item">
-				<div class="overlay">
+				<a href="experiences.html"><div class="overlay">
 					<div class="text">MY EXPERIENCES</div>
-				</div>			
+				</div></a>			
 			</div>
 			<div id="item-3" class="item">
-				<a href="https://google.com"><div class="overlay">
+				<a href="projects.html"><div class="overlay">
 					<div class="text">MY PROJECTS</div>
 				</div></a>	
 			</div>
@@ -95,16 +97,12 @@
 			</div>
 		</div>
 	</div>
-	
-	<div class="footer">
-		<h1>Room for improvement on the website? Concerns? Questions? Comments? Need my resume?</h1>
-		<a href="contact.html"><input type="button" value="GET IN TOUCH"></a>
-		<div id="social-links">
-			<img src="Assets/github.png">
-			<img src="Assets/linkedin.png">
-			<img src="Assets/twitter.png">
-			<img src="Assets/instagram.png">
-		</div>
-	</div>
+
+	<div w3-include-html="footer.html"></div>
+
+	<script>
+	w3IncludeHTML();
+	</script>
+
 </body>
 </html>
