--- a/about-me.html
+++ b/about-me.html
@@ -1,7 +1,8 @@
 <!DOCTYPE html>
 <html>
 	<head>
-		<meta name="viewport" content="width=device-width" />
+		<meta name="viewport" content="width=device-width" charset="utf-8"/>
+		<script src="https://www.w3schools.com/lib/w3data.js"></script>	
 		<link rel="stylesheet" type="text/css" href="Stylesheets/main.css">
 	</head>
 	<body>
@@ -56,20 +57,12 @@
 				<br>
 				<br>
 				<br>
-				<p>Thank you for taking the time to read. Follow the button to learn more about my community engagement and experience.</p>
-				<hr>
-				<hr>
-	
-				<div class="footer">
-					<h1>Room for improvement on the website? Concerns? Questions? Comments? Need my resume?</h1>
-					<a href="contact.html"><input type="button" value="GET IN TOUCH"></a>
-					<div id="social-links">
-						<img src="Assets/github.png">
-						<img src="Assets/linkedin.png">
-						<img src="Assets/twitter.png">
-						<img src="Assets/instagram.png">
-					</div>
-				</div>
+				<div w3-include-html="footer.html"></div>
+
+				<script>
+				w3IncludeHTML();
+				</script>
+				
 			</div>	
 		</div>
 
