Small aesthetic and quote changes.

--- a/about-me.html
+++ b/about-me.html
@@ -6,13 +6,13 @@
 		<link rel="stylesheet" type="text/css" href="Stylesheets/main.css">
 	</head>
 	<body>
-		<nav>
-			<a href="index.html">HOME /</a>
-			<a href="about-me.html">ABOUT /</a>
-			<a href="experiences.html">EXPERIENCES /</a>
-			<a href="projects.html">PROJECT </a>
-		</nav>	
 
+		<div w3-include-html="header.html"></div>
+
+		<script>
+		w3IncludeHTML();
+		</script>
+		
 		<div id="about-hero" class="hero">
 			<div class="container container-notindex">
 				<h2>ABOUT ME</h2>
