--- a/header.html
+++ b/header.html
@@ -7,7 +7,7 @@
 		<nav>
 			<a href="index.html">HOME /</a>
 			<a href="about-me.html">ABOUT /</a>
-			<a href="experiences.html">EXPERIENCES /</a>
+			<a href="experiences.html">EXPERIENCE /</a>
 			<a href="projects.html">PROJECT </a>
 		</nav>	
 	</body>
