--- a/contact.html
+++ b/contact.html
@@ -2,6 +2,8 @@
 	<title>Contact information</title>
 	<meta charset="utf-8">	
 </head>
-<body style="overflow:hidden; margin:0; padding:0;x">
+
+<body style="overflow:hidden; margin:0; padding:0;">
+	
 	<div class="typeform-widget" data-url="https://shahzoda2.typeform.com/to/QRZ2Ru" data-hide-headers=true data-hide-footer=true style="width: 100%; height: 100vh;" > </div> <script> (function() { var qs,js,q,s,d=document, gi=d.getElementById, ce=d.createElement, gt=d.getElementsByTagName, id="typef_orm", b="https://embed.typeform.com/"; if(!gi.call(d,id)) { js=ce.call(d,"script"); js.id=id; js.src=b+"embed.js"; q=gt.call(d,"script")[0]; q.parentNode.insertBefore(js,q) } })() </script> <div style="font-family: Sans-Serif;font-size: 12px;color: #999;opacity: 0.5; padding-top: 5px;" > powered by <a href="https://www.typeform.com/examples/forms/contact-form-template/?utm_campaign=QRZ2Ru&amp;utm_source=typeform.com-9760772-Basic&amp;utm_medium=typeform&amp;utm_content=typeform-embedded-contactform&amp;utm_term=EN" style="color: #999" target="_blank">Typeform</a> </div>
 </body>
