--- a/experiences.html
+++ b/experiences.html
@@ -8,13 +8,13 @@
 		
 	</head>
 	<body>
-		<nav>
-			<a href="index.html">HOME /</a>
-			<a href="about-me.html">ABOUT /</a>
-			<a href="experiences.html">EXPERIENCES /</a>
-			<a href="projects.html">PROJECT </a>
-		</nav>	
 
+		<div w3-include-html="header.html"></div>
+
+		<script>
+		w3IncludeHTML();
+		</script>
+		
 		<div id="experiences-hero" class="hero">
 			<div class="container container-notindex">
 				<h2>EXPERIENCE</h2>
