--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
 	
 	<hr class="higher-hr"> 
 	<hr>
-	<h1>IT'S ALL ABOUT THE PROGRESS.</h1>
+	<h1>Live as if you were to die tomorrow. Learn as if you were to live forever...</h1>
 	<hr>
 	<hr class="lower-hr">
 	
@@ -53,7 +53,7 @@
 	
 	<hr class="higher-hr"> 
 	<hr>
-	<h1>WHY SHAHZODA?</h1>
+	<h1>ALWAYS BRING THE BEST.</h1>
 	<hr>
 	<hr class="lower-hr">
 	
