--- a/projects.html
+++ b/projects.html
@@ -6,12 +6,12 @@
 		<link rel="stylesheet" type="text/css" href="Stylesheets/main.css">	
 	</head>
 	<body style="background-color: white;">
-		<nav>
-			<a href="index.html">HOME /</a>
-			<a href="about-me.html">ABOUT /</a>
-			<a href="experiences.html">EXPERIENCES /</a>
-			<a href="projects.html">PROJECT </a>
-		</nav>	
+
+		<div w3-include-html="header.html"></div>
+
+		<script>
+		w3IncludeHTML();
+		</script>
 		
 		<div id="projects-hero" class="hero">
 			<div class="container container-notindex">
