--- a/header.html
+++ b/header.html
@@ -5,7 +5,7 @@
 	</head>
 	<body>
 		<nav>
-			<a href="index.html">HOME /</a>
+			<a href="https://shahzzoda.github.io">HOME /</a>
 			<a href="about-me.html">ABOUT /</a>
 			<a href="experiences.html">EXPERIENCE /</a>
 			<a href="projects.html">PROJECT </a>
