Spell checked and added differently cliche quotes.

--- a/about-me.html
+++ b/about-me.html
@@ -33,7 +33,7 @@
 
 					You can learn more about my volunteering under <a>experiences</a>. I care deeply about education 
 					and empowerment, as well as micromoments of kindness we can all take. I'm grateful for the Brooklyn College 
-					community and all the people I have met on campus.</p>
+					communities and all the people I have met on campus.</p>
 					<br>
 				<span class="weight-1">
 					<p>The clubs I'm a part of:</p>
