--- a/experiences.html
+++ b/experiences.html
@@ -58,13 +58,13 @@
 					<p>
 						As a Magner Center Ambassador, I greeted and helped students,
 						and professionals, answered phone calls, assisted set up for
-						events, signed in studens, and administrative tasks like 
+						events, signed in students, and administrative tasks like 
 						creating flyers. This was my first formal work experience in 
 						and I enjoyed it as I improved my communication, and met many 
-						wonderful people. I also enjoyed all the advice I recieved at 
+						wonderful people. I also enjoyed all the advice I received at 
 						the events and from the conversations at the Magner Center. 
 					</p>						
-					<h2>Website Devloper Intenship</h2>
+					<h2>Website Developer Internship</h2>
 					<p>
 						Summer 2017, I spent 6 weeks rebuilding Brooklyn Bark's 
 						website. I used Wordpress, as a content management system,
