--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	
 	<hr class="higher-hr"> 
 	<hr>
-	<h1>ALWAYS BRING THE BEST.</h1>
+	<h1>ALWAYS BE YOURSELF.</h1>
 	<hr>
 	<hr class="lower-hr">
 	
@@ -75,7 +75,7 @@
 				</span>
 				<h3>INQUISITIVE</h3>
 				<hr>
-				<P>The smartest people are the ones that dare to ask the stupid questions. With cusriosity and the world wide wed--she's always asking questions.</P>
+				<P>The smartest people are the ones that dare to ask the stupid questions. With curiosity and the world wide web--she's always asking questions.</P>
 			</div>
 			<div class="item">
 				<span class="fa-stack fa-lg">
