--- a/projects.html
+++ b/projects.html
@@ -32,9 +32,10 @@
 						<div class="text">
 							<h3>This website</h3>
 							<hr>
-							<p>I've made multiple personal webistes
-							but most came out awful. This website is 100%
-							mobilie friendly, and written in SASS and HTML.
+							<p>I've made multiple personal websites
+							but I was happy with none. This website is 100%
+							mobile friendly, and written in SCSS and HTML. No 
+							bootstrap, no wordpress or anything else.
 							</p>
 						</div>
 					</div></a>
@@ -46,7 +47,7 @@
 							<hr>
 							<p>Written in JavaScript, it tests how
 							quick your reaction is by seeing how you
-							fast you can click on the disapearing
+							fast you can click on the disappearing
 							circles.</p>
 						</div>
 					</div></a>			
