--- a/about-me.html
+++ b/about-me.html
@@ -29,13 +29,13 @@
 				<p>I'm a rising sophomore at Brooklyn College pursuing a Bachelor of Science in Computer Engineering. 
 					I love to learn things and I want to improve the world's condition. I volunteer as much as I can, work as 
 					web developer, and take care of my three younger siblings as well as support my friends. Most of my volunteering 
-					is short term but I plan to volunteer with Project Rousseau, and RailsBridgeNYC for as long as I can.
+					is short term but I plan to volunteer with Project Rousseau for as long as I can.
 
-					You can learn more about my volunteering under <a>experiences</a>. I care deeply about education 
-					and empowerment, as well as micromoments of kindness we can all take. I'm grateful for the Brooklyn College 
+					You can learn more about my volunteering under <a href="experiences.html">experiences</a>. I care deeply about education 
+					and economic empowerment, as well as micromoments of kindness we can all take. I'm grateful for the Brooklyn College 
 					communities and all the people I have met on campus.</p>
 					<br>
-				<span class="weight-1">
+					<br>
 					<p>The clubs I'm a part of:</p>
 					<ul>
 						<li>Computer Science Club</li>
@@ -43,8 +43,6 @@
 						<li>Math Club</li>
 						<li>Toastmaster International Club</li>
 					</ul> 
-				</span>
-				<br>
 				<br>
 				<hr>
 				<hr>
@@ -56,15 +54,15 @@
 				communitites and clubs, showed true leadership, and offered support, and advice throughout my first year.</p>
 				<br>
 				<br>
-				<br>
-				<div w3-include-html="footer.html"></div>
-
-				<script>
-				w3IncludeHTML();
-				</script>
-				
+				<br>		
 			</div>	
 		</div>
+
+		<div w3-include-html="footer.html"></div>
+
+		<script>
+		w3IncludeHTML();
+		</script>
 
 	</body>	
 </html>
