--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
 	
 	<hr class="higher-hr"> 
 	<hr>
-	<h1>ALWAYS BE YOURSELF.</h1>
+	<h1>ALWAYS BRING THE BEST.</h1>
 	<hr>
 	<hr class="lower-hr">
 	
