Small polishes & favicon made

--- a/about-me.html
+++ b/about-me.html
@@ -4,6 +4,7 @@
 		<meta name="viewport" content="width=device-width" charset="utf-8"/>
 		<script src="https://www.w3schools.com/lib/w3data.js"></script>	
 		<link rel="stylesheet" type="text/css" href="Stylesheets/main.css">
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 	</head>
 	<body>
 
@@ -27,11 +28,11 @@
 				<hr>
 				<hr class="lower-hr">
 				<p>I'm a rising sophomore at Brooklyn College pursuing a Bachelor of Science in Computer Engineering. 
-					I love to learn things and I want to improve the world's condition. I volunteer as much as I can, work as 
-					web developer, and take care of my three younger siblings as well as support my friends. Most of my volunteering 
-					is short term but I plan to volunteer with Project Rousseau for as long as I can.
+					I love to learn things and I want to improve the world's condition. I volunteer as much as I can, study often,
+					and take care of my three younger siblings as well as support my friends. Most of my volunteering 
+					is short term but I plan to volunteer with Project Rousseau, and the Magner Career Center for as long as I can.
 
-					You can learn more about my volunteering under <a href="experiences.html">experiences</a>. I care deeply about education 
+					You can learn more about my volunteering under <a href="experiences.html">experiences</a>. I care deeply about educational 
 					and economic empowerment, as well as micromoments of kindness we can all take. I'm grateful for the Brooklyn College 
 					communities and all the people I have met on campus.</p>
 					<br>
@@ -42,15 +43,17 @@
 						<li>Women in Computer Science Club</li>
 						<li>Math Club</li>
 						<li>Toastmaster International Club</li>
+						<li>Yearbook Club</li>
 					</ul> 
+					<p>I also occasionally write for the Night Call on topics that interest me.</p>
 				<br>
 				<hr>
 				<hr>
 				<h1>Special thanks:</h1>
 				<hr>
 				<hr class="lower-hr">
-				<p>Special shoutout to Chava Shulman, Noam Swissa, Nishat Anjum, Antara Khan, Eugene Dorokhin, Flo Rencia, 
-				Hindy Drillic, Claudia Contreras, Joseph Guevara, and Maged Mahmoud, who have all welcomed me warmly into their 
+				<p>Special shoutout to Noam Swissa, Nishat Anjum, Chava Shulman, Antara Khan, Eugene Dorokhin, Flo Rencia, 
+				Claudia Contreras, Joseph Guevara, and Maged Mahmoud, who have all welcomed me warmly into their 
 				communitites and clubs, showed true leadership, and offered support, and advice throughout my first year.</p>
 				<br>
 				<br>
