--- a/contact.html
+++ b/contact.html
@@ -1,6 +1,7 @@
 <head>
 	<title>Contact information</title>
 	<meta charset="utf-8">	
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 </head>
 
 <body style="overflow:hidden; margin:0; padding:0;">
