--- a/experiences.html
+++ b/experiences.html
@@ -2,9 +2,11 @@
 <html>	
 	<head>
 		
+		<title>Things I've done</title>
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" charset="utf-8"/>
 		<link rel="stylesheet" type="text/css" href="Stylesheets/main.css">	
 		<script src="https://www.w3schools.com/lib/w3data.js"></script>
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 		
 	</head>
 	<body>
@@ -35,51 +37,58 @@
 						Project Rousseau empowers youth in communities with the greatest 
 						need to reach their full potential and pursue higher education. 
 						They aim to do this with their four pillars: mentoring, academics, 
-						community service, and broadening horizons. I have volunteered to 
-						lead a class and have a wonderful mentee I hope to help as much as 
-						possible.
+						community service, and broadening horizons. I have led a class and 
+						have a wonderful mentee whom I hope to help as much as possible.
 					</p>
-					<h2>Magner Center</h2>
+					<h2>Magner Career Center</h2>
 					<p>
-					Magner Center is the career center at Brooklyn College, they 
-					offer resources for students to excel at their career and gain 
-					experience in their field. They have many useful workshops and 
-					events throughout the year. I have helped them out in many of 
-					these events and continue to do so whenever I can.
+						Magner Career Center is the career center at Brooklyn College, they 
+						offer resources for students to excel at their career and gain 
+						experience in their field. They have many useful workshops and 
+						events throughout the year. I have helped them out in many of 
+						these events and continue to do so whenever I can.
 					</p>						
 					<hr>
 					<p>I also do one-two day volunteering for causes such as economic empowerment, animal welfare, community building, and <a href="https://www.linkedin.com/in/shahzodadavlatova/">others</a>.</p>\
 					<hr>
 					<hr>
-					<h1>Other</h1>
+					<h1>Internships/Fellowships</h1>
 					<hr>
 					<hr>
 					<h2>Magner Center Ambassador</h2>
 					<p>
-						As a Magner Center Ambassador, I greeted and helped students,
+						As a Magner Career Center Ambassador, I greeted and helped students,
 						and professionals, answered phone calls, assisted set up for
 						events, signed in students, and administrative tasks like 
 						creating flyers. This was my first formal work experience in 
-						and I enjoyed it as I improved my communication, and met many 
+						and I enjoyed it as I improved my communication, and helped many 
 						wonderful people. I also enjoyed all the advice I received at 
-						the events and from the conversations at the Magner Center. 
+						the events and from the conversations at the Magner Center.
 					</p>						
 					<h2>Website Developer Internship</h2>
 					<p>
 						Summer 2017, I spent 6 weeks rebuilding Brooklyn Bark's 
 						website. I used Wordpress, as a content management system,
 						and coded mainly in SCSS and sometimes PHP. This experience 
-						exposed me to working in teams where I improved my communication 
-						and learned new tools. I feel more comfortable making responsive 
-						website quickly.
+						exposed me to working in teams where I learned new tools. 
+						I feel more comfortable making responsive website quickly.
+						This internship later turned into a part time job for a few
+						more weeks.
 					</p>
+					<hr>
+					<hr>
+					<h1>Extracurricular Activites</h1>
+					<hr>
+					<hr>
 					<h2>Co Director of WICS Mentorship Initiative</h2>
 					<p>
 						The intention of this program is to provide our members with a 
-						network of professionals in the field who have faced the same 
-						challenges they are facing and build a support group to keep 
+						network of professionals in the field who have potentially faced 
+						the same challenges they are facing and build a support group to keep 
 						anyone who identifies as a woman to stay in tech and pursue a 
-						successful career.
+						successful career. I did many aspects of mentor-mentee pairing, outreach 
+						to both, led orientations, and drafted the constitution to adopt the 
+						initiative into the WICS Club to ensure the longevity of the program.
 					</p>						
 				</div>	
 			</div>
