--- a/header.html
+++ b/header.html
@@ -7,8 +7,8 @@
 		<nav>
 			<a href="https://shahzzoda.github.io">HOME /</a>
 			<a href="about-me.html">ABOUT /</a>
-			<a href="experiences.html">EXPERIENCE /</a>
-			<a href="projects.html">PROJECT </a>
+			<a href="experiences.html">EXPERIENCES /</a>
+			<a href="projects.html">PROJECTS </a>
 		</nav>	
 	</body>
 </html>
