--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 	<meta name="viewport" content="width=device-width" charset="utf-8"/>
 	<link href="https://fonts.googleapis.com/css?family=Poppins:300,400,500,600,700" rel="stylesheet">
 	<link rel="stylesheet" type="text/css" href="Stylesheets/main.css">	
+	<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 	<script src="https://use.fontawesome.com/d272e159ad.js"></script>
 	<script src="https://www.w3schools.com/lib/w3data.js"></script>
 </head>
