--- a/projects.html
+++ b/projects.html
@@ -4,6 +4,7 @@
 		<meta name="viewport" content="width=device-width" charset="utf-8"/>
 		<script src="https://www.w3schools.com/lib/w3data.js"></script>
 		<link rel="stylesheet" type="text/css" href="Stylesheets/main.css">	
+		<link rel="shortcut icon" type="image/x-icon" href="favicon.ico"/>
 	</head>
 	<body style="background-color: white;">
 
@@ -35,7 +36,7 @@
 							<p>I've made multiple personal websites
 							but I was happy with none. This website is 100%
 							mobile friendly, and written in SCSS and HTML. No 
-							bootstrap, no wordpress or anything else.
+							bootstrap, no wordpress or anything else!
 							</p>
 						</div>
 					</div></a>
@@ -48,7 +49,7 @@
 							<p>Written in JavaScript, it tests how
 							quick your reaction is by seeing how you
 							fast you can click on the disappearing
-							circles.</p>
+							shapes.</p>
 						</div>
 					</div></a>			
 				</div>
