Changed the order in Experiences

--- a/experiences.html
+++ b/experiences.html
@@ -29,29 +29,6 @@
 				<div class="subcontainer">
 					<hr>
 					<hr>
-					<h1 class="too-large">Volunteering</h1>
-					<hr>
-					<hr>
-					<h2>Project Rousseau</h2>
-					<p>
-						Project Rousseau empowers youth in communities with the greatest 
-						need to reach their full potential and pursue higher education. 
-						They aim to do this with their four pillars: mentoring, academics, 
-						community service, and broadening horizons. I have led a class and 
-						have a wonderful mentee whom I hope to help as much as possible.
-					</p>
-					<h2>Magner Career Center</h2>
-					<p>
-						Magner Career Center is the career center at Brooklyn College, they 
-						offer resources for students to excel at their career and gain 
-						experience in their field. They have many useful workshops and 
-						events throughout the year. I have helped them out in many of 
-						these events and continue to do so whenever I can.
-					</p>						
-					<hr>
-					<p>I also do one-two day volunteering for causes such as economic empowerment, animal welfare, community building, and <a href="https://www.linkedin.com/in/shahzodadavlatova/">others</a>.</p>\
-					<hr>
-					<hr>
 					<h1>Internships/Fellowships</h1>
 					<hr>
 					<hr>
@@ -89,7 +66,31 @@
 						successful career. I did many aspects of mentor-mentee pairing, outreach 
 						to both, led orientations, and drafted the constitution to adopt the 
 						initiative into the WICS Club to ensure the longevity of the program.
+					</p>	
+					<hr>
+					<hr>
+					<h1 class="too-large">Volunteering</h1>
+					<hr>
+					<hr>
+					<h2>Project Rousseau</h2>
+					<p>
+						Project Rousseau empowers youth in communities with the greatest 
+						need to reach their full potential and pursue higher education. 
+						They aim to do this with their four pillars: mentoring, academics, 
+						community service, and broadening horizons. I have led a class and 
+						have a wonderful mentee whom I hope to help as much as possible.
+					</p>
+					<h2>Magner Career Center</h2>
+					<p>
+						Magner Career Center is the career center at Brooklyn College, they 
+						offer resources for students to excel at their career and gain 
+						experience in their field. They have many useful workshops and 
+						events throughout the year. I have helped them out in many of 
+						these events and continue to do so whenever I can. My volunteerism 
+						later led to the my Ambassadorship at the Center. 
 					</p>						
+					<hr>
+					<p>I also do one-two day volunteering for causes such as economic empowerment, animal welfare, community building, and <a href="https://www.linkedin.com/in/shahzodadavlatova/">others</a>.</p>\
 				</div>	
 			</div>
 		</div>
