Changed wording on experiences

--- a/experiences.html
+++ b/experiences.html
@@ -29,7 +29,7 @@
 				<div class="subcontainer">
 					<hr>
 					<hr>
-					<h1>Internships/Fellowships</h1>
+					<h1 class="too-large">Internships</h1>
 					<hr>
 					<hr>
 					<h2>Magner Center Ambassador</h2>
@@ -40,21 +40,21 @@
 						creating flyers. This was my first formal work experience in 
 						and I enjoyed it as I improved my communication, and helped many 
 						wonderful people. I also enjoyed all the advice I received at 
-						the events and from the conversations at the Magner Center.
+						the events and from the conversations at the Magner Center. 
 					</p>						
-					<h2>Website Developer Internship</h2>
+					<h2>Website Developer</h2>
 					<p>
 						Summer 2017, I spent 6 weeks rebuilding Brooklyn Bark's 
 						website. I used Wordpress, as a content management system,
 						and coded mainly in SCSS and sometimes PHP. This experience 
 						exposed me to working in teams where I learned new tools. 
 						I feel more comfortable making responsive website quickly.
-						This internship later turned into a part time job for a few
-						more weeks.
+						This was initially an internship that later turned into a 
+						part time job for a few more weeks while I started school.
 					</p>
 					<hr>
 					<hr>
-					<h1>Extracurricular Activites</h1>
+					<h1 class="too-large">Extracurricular Activites</h1>
 					<hr>
 					<hr>
 					<h2>Co Director of WICS Mentorship Initiative</h2>
